# rworld

./: .gitignore  CMakeLists.txt  README.md
examples/: world_demo.cpp
include/: rworld.h
include/rworld/: world.h
src/: world.cpp
